--- a/MoyoBusinessAdvisory/appsettings.json
+++ b/MoyoBusinessAdvisory/appsettings.json
@@ -10,5 +10,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Tokens": {
+    "Key": "y+VRv[&)0XhxJ<sk=yUpW{yE5CH@xhjtshdkdhhdkdggfkch",
+    "Issuer": "localhost",
+    "Audience": "localhost"
+  },
   "AllowedHosts": "*"
 }
