OAuth working. Back End

--- a/MoyoBusinessAdvisory/appsettings.json
+++ b/MoyoBusinessAdvisory/appsettings.json
@@ -15,5 +15,11 @@
     "Issuer": "localhost",
     "Audience": "localhost"
   },
+  "Authentication": {
+    "Google": {
+      "ClientId": "153781463009-47lr197g2h121om900oov4rb8e6ims0a.apps.googleusercontent.com",
+      "ClientSecret": "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"
+    }
+  },
   "AllowedHosts": "*"
 }
