Connectio String for azure done

--- a/MoyoBusinessAdvisory/appsettings.json
+++ b/MoyoBusinessAdvisory/appsettings.json
@@ -1,7 +1,10 @@
 {
   "ConnectionStrings": {
+    // https://stackoverflow.com/questions/45451701/how-to-add-azure-sql-server-connection-string-to-app-config-in-windows-forms
+    "DefaultConnection": "Server=MIKEWEST\\SQLEXPRESS;Database=MoyoDatabase;Trusted_Connection=True;Encrypt=false",
+    "AZURE_SQL_CONNECTIONSTRING": "Server=tcp:moyobusinessadvisory.database.windows.net,1433;Initial Catalog=MoyoBusinessAdvisoryDB;Encrypt=True;User ID=MikeGS;Password=SylviaSouth999;TrustServerCertificate=False"
 
-    "DefaultConnection": "Server=MIKEWEST\\SQLEXPRESS;Database=MoyoDatabase;Trusted_Connection=True;Encrypt=false"
+
 
   },
   "Logging": {
