ran through entire system check. seems to be working

--- a/MoyoBusinessAdvisory/appsettings.json
+++ b/MoyoBusinessAdvisory/appsettings.json
@@ -2,7 +2,7 @@
   "ConnectionStrings": {
     // https://stackoverflow.com/questions/45451701/how-to-add-azure-sql-server-connection-string-to-app-config-in-windows-forms
     "DefaultConnection": "Server=MIKEWEST\\SQLEXPRESS;Database=MoyoDatabase;Trusted_Connection=True;Encrypt=false",
-    "AZURE_SQL_CONNECTIONSTRING": "Server=tcp:moyobusinessadvisory.database.windows.net,1433;Initial Catalog=MoyoBusinessAdvisoryDB;Encrypt=True;User ID=MikeGS;Password=SylviaSouth999;TrustServerCertificate=False"
+    "AZURE_SQL_CONNECTIONSTRING": "Server=tcp:moyobusinessadvisory.database.windows.net,1433;Initial Catalog=MoyoBusinessAdvisoryDB;Encrypt=False;User ID=MikeGS;Password=SylviaSouth999;TrustServerCertificate=False"
 
 
 
@@ -24,5 +24,10 @@
       "ClientSecret": "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"
     }
   },
+  "ApplicationInsights": {
+    "ConnectionString": "InstrumentationKey=dec6d6b0-041f-47c7-b8c2-bb038222a031;IngestionEndpoint=https://canadacentral-1.in.applicationinsights.azure.com/;LiveEndpoint=https://canadacentral.livediagnostics.monitor.azure.com/;ApplicationId=5fbd2d6a-d960-4646-aa3d-c0074201e609"
+  },
+
+
   "AllowedHosts": "*"
 }
